# nanoclaw

./: # Project Jarvis Spec-Driven Build Plan.md  .claude-env  .coderabbit.yaml  .dev.vars.example  .dockerignore  .env.bak  .env.example  .env.provider.example  .env.vps.example  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .goreleaser.yaml  .mcp.json  .nanoclaw-token  .npmrc  .oxfmtignore  .oxlintrc.json  .pr_body.md  .pre-commit-config.yaml  .releaserc.json  .supervisor-agent.yml  .worktree-lock.json  AGENT-HUB-COUPLING.md  AGENTS.md  AI_CONTEXT.md  AI_RULES.md  BAGET-DEPLOY.md  BAGET.md  BROWSER_FIXES.md  BUGFIX_AGENT_HANGING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION_OPPORTUNITIES.md  CONTRIBUTORS.md  Cargo.toml  Containerfile.host  (+141 more)
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: README.md  audit-trail.md  breadcrumbs-archive.md  breadcrumbs.md  claude-usage.py  hooks.json  launch.json  milestones.md  risk-policy.json  session-log.md  settings.json  settings.local.json  statusline.sh  versions.md
.codex/: config.toml  scripts
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.factory/: .gitignore  plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labels.json
.husky/: post-merge  pre-commit  pre-push
.nanoclaw-migrations/: guide.md
.opencode/: oh-my-opencode.jsonc
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.ralph/: guardrails.md  progress.md
.task/: REPORT.md  TASK.md
_legacy/: EMAIL-PIPELINE-HANDOFF.md  MACAZBD-EMAIL-INTAKE-HANDOFF.md  MACAZBD-EMAIL-INTAKE-PROMPT.md  PORTING.md  RENAME-PLAN.md
agent-hub/: .gitignore  ARCHITECTURE.md  Dockerfile  agent_thread.py  build-cloudrun.sh  cloudrun_server.py  cost_tracker.py  openapi-thais.yaml  orchestrator.py  requirements.txt  token_manager.py  triage_engine.py  webhook_server.py
agent-runner/: package-lock.json  package.json
agentdojo/: nanoclaw_agent.py  requirements.txt  run_benchmark.py
apps/microclaw-device/: Cargo.toml  build.rs  idf_component.yml
apps/microclaw-device/src/: drivers.rs  event_loop.rs  lib.rs  main.rs  pipeline.rs  renderer.rs  runtime.rs  slint_platform.rs  storage.rs  transport.rs
apps/microclaw-device/tests/: drivers.rs  event_loop.rs  renderer.rs  runtime.rs  storage.rs  transport.rs
apps/microclaw-device/ui/: main.slint
apps/microclaw-host/: Cargo.toml
apps/microclaw-host/src/: lib.rs  main.rs
apps/microclaw-host/tests/: host.rs
assets/: telegram-botfather-qr.txt
aws-policies/: remotion-policy.json
botti-voice/: .gcloudignore  .gitignore  Dockerfile  botti_voice.py  debug_chat_sub.py  requirements.txt  setup_chat_watch.py  setup_gmail_watch.py  setup_thais_gmail.py  start.sh
chat-gateway/: requirements.txt  server.py
chat-pwa/: app.js  index.html  manifest.json  pcm-worklet.js  style.css  sw.js
chrome-extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
cli/: Cargo.toml  README.md
cli/src/: agent.rs  app.rs  commands.rs  config.rs  db.rs  event.rs  main.rs  session.rs  ui.rs
config-examples/: crash-monitor.json  security-policy.json  trust.yaml.example  (+1 more)
crates/microclaw-connectors/: Cargo.toml
crates/microclaw-connectors/src/: lib.rs
crates/microclaw-connectors/tests/: email.rs  email_runtime.rs  imessage.rs  imessage_runtime.rs  telegram.rs  trait.rs
(+6645 files in other folders)
