[workspace]
members = [
  "crates/microclaw-core",
  "crates/microclaw-protocol",
  "crates/microclaw-config",
  "crates/microclaw-store",
  "crates/microclaw-queue",
  "crates/microclaw-scheduler",
  "crates/microclaw-bus",
  "crates/microclaw-sandbox",
  "crates/microclaw-connectors",
  "apps/microclaw-device",
  "apps/microclaw-host"
]
resolver = "2"
