[package]
name = "microclaw-connectors"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "native-tls"] }
imap = { version = "3.0.0-alpha.15", features = ["native-tls"] }
native-tls = "0.2"

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"
